# test-project

./: .gitignore  Makefile  README.md
client/: .env.example  package-lock.json  package.json
client/src/: App.vue
server/: .env.example  pyproject.toml
server/src/server/: __init__.py  __main__.py  db.py  init_db.py  sync_players.py  utils.py
