[project]
name = "server"
version = "0.1.0"
description = ""
authors = [
    {name = "Abel Mohler",email = "a.merwan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "flask (>=3.1.2,<4.0.0)",
    "flask-cors (>=5.0.0,<6.0.0)",
]

[tool.poetry]
packages = [{include = "server", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
